gccida/c1/simplify_binary_operation
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1335:33: error: must use 'enum' tag to refer to type 'rtx_code'
rtx  simplify_binary_operation( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                ^
                                enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1335:48: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  simplify_binary_operation( rtx_code code, machine_mode mode, rtx op0, rtx op1) 
                                               ^
                                               enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1375:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v43; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1391:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v59; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1396:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v64; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1429:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v97; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1439:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v107; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1447:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v115; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1449:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v117; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1489:4: error: expected ';' after expression
rtx i; // [rsp+40h] [rbp-78h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1489:5: error: use of undeclared identifier 'i'
rtx i; // [rsp+40h] [rbp-78h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1493:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v162; // [rsp+6Ch] [rbp-4Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1495:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v164[2]; // [rsp+80h] [rbp-38h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1506:46: error: expected ')'
v13 = swap_commutative_operands_p( v6, ( rtx)v9); 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1506:34: note: to match this '('
v13 = swap_commutative_operands_p( v6, ( rtx)v9); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1530:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v17 = mode_class_0[mode]; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1542:14: error: expected ';' after return statement
return ( rtx)data.r[2]; 
             ^
             ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1545:1: error: use of undeclared identifier 'i'
i = op1; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1551:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v20 = ( unsigned __int64)v6[1]; 
                         ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1816:12: error: expected ')'
if ( ( rtx)v11[1] == const_int_rtx[64] && ( rtx)op1[1] == const_int_rtx[64] ) 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/simplify-rtx.c:1816:4: note: to match this '('
if ( ( rtx)v11[1] == const_int_rtx[64] && ( rtx)op1[1] == const_int_rtx[64] ) 
   ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_binary_operation/src/obj/simplify-rtx.o] Error 1
